# video-ai-editor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  Video AI Editor.spec  build_app.sh  build_dmg.sh  build_win.ps1  entitlements.plist  pyproject.toml  run.ps1  run.sh
.claude/: launch.json
.github/workflows/: ci.yml
docs/plans/: 2026-07-11-editor-bug-fixes-round-2.md  2026-07-11-editor-bug-fixes-round-3.md  2026-07-13-editor-bug-fixes-round-4.md  2026-07-13-timeline-visibility-and-vo-clarity.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
tests/: test_ai_features.py  test_all_tools_smoke.py  test_api_e2e.py  test_api_hardening.py  test_assign_caption_speakers.py  test_atomic_swap.py  test_audio_correctness.py  test_audio_import_preview.py  test_brand_kit_fields.py  test_canvas_inference.py  test_canvas_rescale_overlays.py  test_captions.py  test_chat_context_freshness.py  test_chat_context_grounding.py  test_chunk_cache_recovery.py  test_chunk_parallel.py  test_chunk_workers.py  test_config_paths.py  test_desktop_npm.py  test_desktop_vo_bridge.py  test_edge_cases.py  test_edl_schema.py  test_effects_mask_cache.py  test_encoder_select.py  test_encoding_roundtrip.py  test_env_inline_comments.py  test_export_container.py  test_filename_sanitize.py  test_frontend_smoke.py  test_hook_stack.py  test_ingest_smoke.py  test_keyframe_easing_export.py  test_lane_validation.py  test_lut_intensity.py  test_mcp_server.py  test_ops_log.py  test_overlay_input_index_math.py  test_overlay_ripple.py  test_pip_audio_input_index.py  test_platform_dirs.py  (+36 more)
(+119 files in other folders)
